sites/indigo/clusters/dal-indigo-core-1/wave-3/overlays/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: auth.indigo.dalmura.cloud
    # Uncomment when we want to CNAME to public interface
    #external-dns.alpha.kubernetes.io/target: indigo.dalmura.cloud
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: true
spec:
  ingressClassName: ingress-public
  tls:
    - hosts:
      - auth.indigo.dalmura.cloud
      secretName: keycloak-cert
  rules:
  - host: auth.indigo.dalmura.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: indigo-service
            port:
              number: 8080
